# ArkDamage

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt
ArkDamage/: __init__.py  version.py
ArkDamage/dmg_cal/: ApplyBuff.py  CalAnimation.py  CalAttack.py  CalCharAttributes.py  CalDps.py  CalDpsSeries.py  CalDurations.py  CalGradDamage.py  Character.py  GradAttackTiming.py  InitChar.py  RESOURCE_PATH.py  __init__.py  load_json.py  log.py
ArkDamage/dmg_cal/model/: Character.py  InitChar.py  anim.py  battle_equip_data.py  char_data.py  display_names.py  enemy_data.py  models.py  options.py  raid_buff.py  skill_data.py
ArkDamage/resource/: __init__.py  check_version.py
ArkDamage/utils/: handle_excel_json.py  math_model.py
ArkDamage/utils/alias/: chEquipName_to_EquipId.py  chName_to_CharacterId_list.py  chSkillName_to_SkillId.py
ArkDamage/utils/download_resource/: RESOURCE_PATH.py  download_from_github.py  download_url.py  resource_list.py
ArkDamage/utils/exception/: handle_exception.py
ArkDamage/utils/message/: send_msg.py
ArkDamage/utils/nonebot2/: rule.py
